[workspace.package]
version = "2.0.2"
authors = ["Paseo Core Team"]
edition = "2021"
repository = "https://github.com/paseo-network/runtimes.git"
license = "GPL-3.0-only"                                     # TODO <https://github.com/paseo-fellows/runtimes/issues/29>

[workspace.dependencies]
pallet-ah-migrator = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v2.0.2", default-features = false }
pallet-ah-ops = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v2.0.2", default-features = false }
pallet-rc-migrator = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v2.0.2", default-features = false }
system-parachains-common = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v2.0.2", default-features = false }

pallet-election-provider-multi-block = { version = "0.3.4", default-features = false }
pallet-staking-async = { version = "0.6.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
rand = { version = "0.9.2" }
impl-trait-for-tuples = { version = "0.2.3", default-features = false }

kusama-runtime-constants = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.7.1", package = "kusama-runtime-constants", default-features = false }
bp-bridge-hub-kusama = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.7.1", package = "bp-bridge-hub-kusama", default-features = false }
bp-bridge-hub-polkadot = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.7.1", package = "bp-bridge-hub-polkadot", default-features = false }
bp-asset-hub-kusama = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.7.1", package = "bp-asset-hub-kusama", default-features = false }
collectives-polkadot-runtime-constants = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.7.1", package = "collectives-polkadot-runtime-constants", default-features = false }
pallet-remote-proxy = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.7.1", package = "pallet-remote-proxy", default-features = false }

# Local dependencies

paseo-runtime-constants = { package = "paseo-runtime-constants", path = "relay/paseo/constants", default-features = false }
asset-hub-paseo-runtime = { path = "system-parachains/asset-hub-paseo", default-features = false }
bridge-hub-paseo-runtime = { path = "system-parachains/bridge-hub-paseo", default-features = false }
people-paseo-runtime = { path = "system-parachains/people-paseo", default-features = false }
coretime-paseo-runtime = { path = "system-parachains/coretime-paseo", default-features = false }
collectives-paseo-runtime = { path = "system-parachains/collectives-paseo" }
collectives-paseo-runtime-constants = { path = "system-parachains/collectives-paseo/constants" }

# Polkadot SDK
bp-bridge-hub-paseo = { path = "system-parachains/bridge-hub-paseo/primitives", default-features = false }
bp-asset-hub-paseo = { path = "system-parachains/asset-hub-paseo/primitives", default-features = false }
paseo-runtime = { path = "relay/paseo", default-features = false }
integration-tests-helpers = { path = "integration-tests/emulated/helpers" }
paseo-system-emulated-network = { path = "integration-tests/emulated/networks/paseo-system" }
asset-hub-paseo-emulated-chain = { path = "integration-tests/emulated/chains/parachains/assets/asset-hub-paseo" }
bridge-hub-paseo-emulated-chain = { path = "integration-tests/emulated/chains/parachains/bridges/bridge-hub-paseo" }
penpal-emulated-chain = { path = "integration-tests/emulated/chains/parachains/testing/penpal" }
people-paseo-emulated-chain = { path = "integration-tests/emulated/chains/parachains/people/people-paseo" }
paseo-emulated-chain = { path = "integration-tests/emulated/chains/relays/paseo" }
assert_matches = { version = "1.5.0" }
approx = { version = "0.5.1" }
asset-test-utils = { version = "26.0.1" }
assets-common = { version = "0.24.0", default-features = false }
authority-discovery-primitives = { version = "38.0.0", default-features = false, package = "sp-authority-discovery" }
babe-primitives = { version = "0.44.0", default-features = false, package = "sp-consensus-babe" }
beefy-primitives = { version = "26.0.0", default-features = false, package = "sp-consensus-beefy" }
binary-merkle-tree = { version = "16.0.0", default-features = false }
bp-bridge-hub-cumulus = { version = "0.24.0", default-features = false }
bp-header-chain = { version = "0.22.0", default-features = false }
bp-messages = { version = "0.22.0", default-features = false }
bp-parachains = { version = "0.22.0", default-features = false }
bp-paseo-core = { version = "0.22.0", default-features = false }
bp-polkadot-core = { version = "0.22.0", default-features = false }
bp-relayers = { version = "0.22.0", default-features = false }
bp-runtime = { version = "0.22.0", default-features = false }
bp-xcm-bridge-hub = { version = "0.8.0", default-features = false }
bp-xcm-bridge-hub-router = { version = "0.19.0", default-features = false }
bridge-hub-common = { version = "0.15.0", default-features = false }
bridge-hub-test-utils = { version = "0.25.0" }
bridge-runtime-common = { version = "0.23.0", default-features = false }
clap = { version = "4.5.0" }
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
collectives-paseo-emulated-chain = { path = "integration-tests/emulated/chains/parachains/collectives/collectives-paseo" }
coretime-paseo-emulated-chain = { path = "integration-tests/emulated/chains/parachains/coretime/coretime-paseo" }
cumulus-pallet-aura-ext = { version = "0.22.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.22.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "23.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.21.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.22.0", default-features = false }
cumulus-primitives-aura = { version = "0.19.0", default-features = false }
cumulus-primitives-core = { version = "0.20.0", default-features = false }
cumulus-primitives-utility = { version = "0.22.0", default-features = false }
emulated-integration-tests-common = { version = "24.0.0" }
enumflags2 = { version = "0.7.7" }
frame-benchmarking = { version = "42.0.0", default-features = false }
frame-election-provider-support = { version = "42.0.0", default-features = false }
frame-executive = { version = "42.0.1", default-features = false }
frame-support = { version = "42.0.0", default-features = false }
frame-system = { version = "42.0.0", default-features = false }
frame-system-benchmarking = { version = "42.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "38.0.0", default-features = false }
frame-try-runtime = { version = "0.48.0", default-features = false }
grandpa = { version = "0.37.0", package = "sc-consensus-grandpa" }
hex-literal = { version = "0.4.1" }
log = { version = "0.4.22", default-features = false }
pallet-alliance = { version = "41.0.0", default-features = false }
pallet-asset-conversion = { version = "24.0.0", default-features = false }
pallet-asset-conversion-tx-payment = { version = "24.0.0", default-features = false }
pallet-asset-rate = { version = "21.0.0", default-features = false }
pallet-asset-tx-payment = { version = "42.0.0", default-features = false }
pallet-assets = { version = "45.0.0", default-features = false }
pallet-aura = { version = "41.0.0", default-features = false }
pallet-authority-discovery = { version = "42.0.0", default-features = false }
pallet-authorship = { version = "42.0.0", default-features = false }
pallet-babe = { version = "42.0.0", default-features = false }
pallet-bags-list = { version = "41.0.0", default-features = false }
pallet-balances = { version = "43.0.1", default-features = false }
pallet-beefy = { version = "43.0.0", default-features = false }
pallet-beefy-mmr = { version = "43.0.0", default-features = false }
pallet-bounties = { version = "41.0.0", default-features = false }
pallet-bridge-grandpa = { version = "0.22.0", default-features = false }
pallet-bridge-messages = { version = "0.22.0", default-features = false }
pallet-bridge-parachains = { version = "0.22.0", default-features = false }
pallet-bridge-relayers = { version = "0.22.0", default-features = false }
pallet-broker = { version = "0.21.0", default-features = false }
pallet-child-bounties = { version = "41.0.0", default-features = false }
pallet-collator-selection = { version = "23.0.0", default-features = false }
pallet-collective = { version = "42.0.0", default-features = false }
pallet-conviction-voting = { version = "42.0.0", default-features = false }
pallet-core-fellowship = { version = "26.0.1", default-features = false }
pallet-election-provider-multi-phase = { version = "41.0.0", default-features = false }
pallet-election-provider-support-benchmarking = { version = "41.0.0", default-features = false }
pallet-fast-unstake = { version = "41.0.0", default-features = false }
pallet-glutton = { version = "28.0.0", default-features = false }
pallet-grandpa = { version = "42.0.0", default-features = false }
pallet-identity = { version = "42.0.0", default-features = false }
pallet-indices = { version = "42.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "30.0.0", default-features = false }
pallet-membership = { version = "42.0.0", default-features = false }
pallet-message-queue = { version = "45.0.0", default-features = false }
pallet-mmr = { version = "42.0.0", default-features = false }
pallet-multisig = { version = "42.0.0", default-features = false }
pallet-nft-fractionalization = { version = "26.0.0", default-features = false }
pallet-nfts = { version = "36.0.0", default-features = false }
pallet-nfts-runtime-api = { version = "28.0.0", default-features = false }
pallet-nis = { version = "42.0.0", default-features = false }
pallet-migrations = { version = "12.0.0", default-features = false }
pallet-nomination-pools = { version = "40.0.0", default-features = false }
pallet-nomination-pools-benchmarking = { version = "40.0.0", default-features = false }
pallet-nomination-pools-runtime-api = { version = "38.0.0", default-features = false }
pallet-offences = { version = "41.0.0", default-features = false }
pallet-offences-benchmarking = { version = "42.0.0", default-features = false }
pallet-parameters = { version = "0.13.0", default-features = false }
pallet-preimage = { version = "42.0.0", default-features = false }
pallet-proxy = { version = "42.0.0", default-features = false }
pallet-ranked-collective = { version = "42.0.0", default-features = false }
pallet-recovery = { version = "42.0.0", default-features = false }
pallet-referenda = { version = "42.0.0", default-features = false }
pallet-revive = { version = "0.9.0", default-features = false }
pallet-salary = { version = "27.0.0", default-features = false }
pallet-scheduler = { version = "43.0.0", default-features = false }
pallet-session = { version = "42.0.0", default-features = false }
pallet-session-benchmarking = { version = "42.0.0", default-features = false }
pallet-society = { version = "42.2.0", default-features = false }
pallet-staking = { version = "42.0.0", default-features = false }
pallet-delegated-staking = { version = "9.0.0", default-features = false }
pallet-staking-async-ah-client = { version = "0.5.0", default-features = false }
pallet-staking-async-rc-client = { version = "0.5.0", default-features = false }
pallet-staking-reward-curve = { version = "12.0.0" }
pallet-staking-reward-fn = { version = "24.0.0", default-features = false }
pallet-staking-runtime-api = { version = "28.0.0", default-features = false }
pallet-state-trie-migration = { version = "47.0.0", default-features = false }
pallet-sudo = { version = "42.0.0", default-features = false }
pallet-timestamp = { version = "41.0.0", default-features = false }
pallet-transaction-payment = { version = "42.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "42.0.0", default-features = false }
pallet-treasury = { version = "41.0.0", default-features = false }
pallet-uniques = { version = "42.0.0", default-features = false }
pallet-utility = { version = "42.0.0", default-features = false }
pallet-vesting = { version = "42.0.0", default-features = false }
pallet-whitelist = { version = "41.0.0", default-features = false }
pallet-xcm = { version = "22.0.1", default-features = false }
pallet-xcm-benchmarks = { version = "22.0.0", default-features = false }
pallet-xcm-bridge-hub = { version = "0.18.0", default-features = false }
pallet-xcm-bridge-hub-router = { version = "0.20.0", default-features = false }
parachain-info = { version = "0.22.0", default-features = false, package = "staging-parachain-info" }
parachains-common = { version = "24.0.0", default-features = false }
parachains-runtimes-test-utils = { version = "25.0.0" }
paste = { version = "1.0.14" }
penpal-runtime = { version = "0.32.0" }
people-kusama-emulated-chain = { path = "integration-tests/emulated/chains/parachains/people/people-kusama" }
people-kusama-runtime = { path = "system-parachains/people/people-kusama" }
polkadot-core-primitives = { version = "19.0.0", default-features = false }
polkadot-parachain-primitives = { version = "18.0.0", default-features = false }
polkadot-primitives = { version = "20.0.0", default-features = false }
polkadot-runtime-common = { version = "21.0.0", default-features = false }
paseo-runtime-common = { version = "21.0.0", default-features = false }
primitive-types = { version = "0.13.1", default-features = false }
frame-metadata-hash-extension = { version = "0.10.0", default-features = false }
remote-externalities = { version = "0.53.0", package = "frame-remote-externalities" }
runtime-parachains = { version = "21.0.1", default-features = false, package = "polkadot-runtime-parachains" }
sc-chain-spec = { version = "45.0.0" }
sc-network = { version = "0.52.0" }
scale-info = { version = "2.11.6", default-features = false }
separator = { version = "0.4.1" }
serde = { version = "1.0.214" }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.13.1" }
snowbridge-beacon-primitives = { version = "0.15.2", default-features = false }
snowbridge-core = { version = "0.15.0", default-features = false }
snowbridge-merkle-tree = { version = "0.4.0", default-features = false }
snowbridge-outbound-queue-runtime-api = { version = "0.15.0", default-features = false }
snowbridge-outbound-queue-v2-runtime-api = { version = "0.4.0", default-features = false }
snowbridge-outbound-queue-primitives = { version = "0.4.0", default-features = false }
snowbridge-pallet-ethereum-client = { version = "0.15.2", default-features = false }
snowbridge-pallet-inbound-queue = { version = "0.15.2", default-features = false }
snowbridge-pallet-inbound-queue-v2 = { version = "0.4.0", default-features = false }
snowbridge-pallet-inbound-queue-fixtures = { version = "0.23.0" }
snowbridge-pallet-ethereum-client-fixtures = { version = "0.23.0" }
snowbridge-pallet-outbound-queue = { version = "0.15.0", default-features = false }
snowbridge-pallet-outbound-queue-v2 = { version = "0.4.0", default-features = false }
snowbridge-pallet-system = { version = "0.15.0", default-features = false }
snowbridge-pallet-system-v2 = { version = "0.4.0", default-features = false }
snowbridge-pallet-system-frontend = { version = "0.4.0", default-features = false }
snowbridge-inbound-queue-primitives = { version = "0.4.0", default-features = false }
snowbridge-runtime-common = { version = "0.16.0", default-features = false }
snowbridge-runtime-test-common = { version = "0.18.0" }
snowbridge-system-runtime-api = { version = "0.15.0", default-features = false }
snowbridge-system-v2-runtime-api = { version = "0.4.0", default-features = false }
sp-api = { version = "38.0.0", default-features = false }
sp-application-crypto = { version = "42.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-block-builder = { version = "38.0.0", default-features = false }
sp-consensus-aura = { version = "0.44.0", default-features = false }
sp-core = { version = "38.0.0", default-features = false }
sp-debug-derive = { version = "14.0.0", default-features = false }
sp-genesis-builder = { version = "0.19.0", default-features = false }
sp-inherents = { version = "38.0.0", default-features = false }
sp-io = { version = "42.0.0", default-features = false }
sp-keyring = { version = "43.0.0" }
sp-npos-elections = { version = "38.0.0", default-features = false }
sp-offchain = { version = "38.0.0", default-features = false }
sp-runtime = { version = "43.0.0", default-features = false }
sp-session = { version = "40.0.0", default-features = false }
sp-staking = { version = "40.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-state-machine = { version = "0.47.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-tracing = { version = "18.0.0", default-features = false }
sp-transaction-pool = { version = "38.0.0", default-features = false }
sp-trie = { version = "41.0.0", default-features = false }
sp-version = { version = "41.0.0", default-features = false }
sp-weights = { version = "33.0.0", default-features = false }
substrate-wasm-builder = { version = "28.0.0" }
system-parachains-constants = { path = "system-parachains/constants", default-features = false }
tokio = { version = "1.45.0" }
xcm = { version = "18.0.0", default-features = false, package = "staging-xcm" }
xcm-builder = { version = "22.0.0", default-features = false, package = "staging-xcm-builder" }
xcm-emulator = { version = "0.22.0" }
xcm-executor = { version = "21.0.0", default-features = false, package = "staging-xcm-executor" }
xcm-runtime-apis = { version = "0.9.0", default-features = false }
anyhow = { version = "1.0.82" }
subxt = { version = "0.43.0" }
tracing-subscriber = { version = "0.3.18" }
zombienet-sdk = { version = "0.3.12" }
tuplex = { version = "0.1.0", default-features = false }
relay-common = { path = "relay/common", default-features = false }
ss58-registry = { version = "1.47.0" }

[workspace]
resolver = "2"

members = [
	"integration-tests/emulated/chains/parachains/assets/asset-hub-paseo",
	"integration-tests/emulated/chains/parachains/bridges/bridge-hub-paseo",
	"integration-tests/emulated/chains/parachains/collectives/collectives-paseo",
	"integration-tests/emulated/chains/parachains/coretime/coretime-paseo",
	"integration-tests/emulated/chains/parachains/people/people-paseo",
	"integration-tests/emulated/chains/parachains/testing/penpal",
	"integration-tests/emulated/chains/relays/paseo",
	"integration-tests/emulated/helpers",
	"integration-tests/emulated/networks/paseo-system",
	"integration-tests/emulated/tests/bridges/bridge-hub-paseo",
	"integration-tests/emulated/tests/coretime/coretime-paseo",
	"relay/common",
	"relay/paseo",
	"relay/paseo/constants",
	"system-parachains/asset-hub-paseo",
	"system-parachains/asset-hub-paseo/primitives",
	"system-parachains/bridge-hub-paseo",
	"system-parachains/bridge-hub-paseo/primitives",
	"system-parachains/collectives-paseo",
	"system-parachains/collectives-paseo/constants",
	"system-parachains/constants",
	"system-parachains/coretime-paseo",
	"system-parachains/people-paseo",
]

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
