[package]
name = "chain-spec-generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { features = [ "derive" ] , workspace = true }
serde_json = { workspace = true }
serde = { features = ["derive"] , workspace = true }

paseo-runtime = { path = "../relay/paseo" }
paseo-runtime-constants = { path = "../relay/paseo/constants", default-features = true }

sc-chain-spec = { workspace = true }
runtime-parachains = { workspace = true, default-features = true }
polkadot-primitives = { workspace = true, default-features = true }
babe-primitives = { workspace = true, default-features = true }
authority-discovery-primitives = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
pallet-staking = { workspace = true, default-features = true }
grandpa = { workspace = true }
sp-runtime = { workspace = true, default-features = true }
beefy-primitives = { workspace = true, default-features = true }
xcm = { package = "staging-xcm", version = "8.0.1" }
parachains-common = { workspace = true, default-features = true }
cumulus-primitives-core = { workspace = true, default-features = true }

[features]
fast-runtime = [
	"paseo-runtime/fast-runtime"
]
runtime-benchmarks = [
	"paseo-runtime/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]
