[package]
name = "chain-spec-generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde = { features = ["derive"], workspace = true }

paseo-runtime = { workspace = true }
sc-chain-spec = { workspace = true }
sc-network = { workspace = true }
asset-hub-paseo-runtime = { workspace = true }
bridge-hub-paseo-runtime = { workspace = true }
coretime-paseo-runtime = { workspace = true }
people-paseo-runtime = { workspace = true }

[features]
fast-runtime = ["paseo-runtime/fast-runtime"]
runtime-benchmarks = [
	"asset-hub-paseo-runtime/runtime-benchmarks",
	"bridge-hub-paseo-runtime/runtime-benchmarks",
	"coretime-paseo-runtime/runtime-benchmarks",
	"people-paseo-runtime/runtime-benchmarks",
	"paseo-runtime/runtime-benchmarks",
]
