[package]
name = "system-parachains-constants"
description = "Common constants for System Parachains runtimes"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smallvec = "1.8.0"

frame-support = { workspace = true }
parachains-common = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-primitives ={ workspace = true }
paseo-runtime-constants = { path = "../../relay/paseo/constants", default-features = false}
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"parachains-common/std",
	"polkadot-core-primitives/std",
	"polkadot-primitives/std",
	"paseo-runtime-constants/std",
	"sp-runtime/std",
]
